--- a/VolantMusteriDuzel/Properties/Settings.settings
+++ b/VolantMusteriDuzel/Properties/Settings.settings
@@ -35,5 +35,17 @@
     <Setting Name="SmsPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)">Y9N2A4V7</Value>
     </Setting>
+    <Setting Name="EntegrefSecretPhase" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="YeniGun" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="EntegrefAIPToken" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="VKN" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
