--- a/VolantMusteriDuzel/App.config
+++ b/VolantMusteriDuzel/App.config
@@ -86,6 +86,18 @@
       <setting name="SmsPassword" serializeAs="String">
         <value>Y9N2A4V7</value>
       </setting>
+      <setting name="EntegrefSecretPhase" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="YeniGun" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="EntegrefAIPToken" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="VKN" serializeAs="String">
+        <value />
+      </setting>
     </VolantMusteriDuzel.Properties.Settings>
   </userSettings>
 </configuration>
