--- a/VolantMusteriDuzel/packages.config
+++ b/VolantMusteriDuzel/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net452" />
+  <package id="SKGL" version="2.0.5.3" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
 </packages>
