--- a/VolantMusteriDuzel/App.config
+++ b/VolantMusteriDuzel/App.config
@@ -96,7 +96,7 @@
         <value />
       </setting>
       <setting name="VKN" serializeAs="String">
-        <value />
+        <value>6200080458</value>
       </setting>
     </VolantMusteriDuzel.Properties.Settings>
   </userSettings>
