--- a/VolantMusteriDuzel/Properties/Settings.settings
+++ b/VolantMusteriDuzel/Properties/Settings.settings
@@ -45,7 +45,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="VKN" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">6200080458</Value>
     </Setting>
   </Settings>
 </SettingsFile>
